$ added copying of assetss

--- a/src/index.html
+++ b/src/index.html
@@ -1,102 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	<div class="container">
-		<h1>To do list</h1>
-		<div class="field">
-			<input type="text">
-			<button>add new</button>
-		</div>
-		<div>
-			<div class="buttons">
-				<button>Delte selected</button>
-				<button>Delte all</button>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Document</title>
+	</head>
+	<body>
+		<div class="container">
+			<h1>To do list</h1>
+			<div class="field">
+				<input type="text">
+				<button>add new</button>
 			</div>
-			<ul>
-				<li>
-					<div class="task">
-						<div class="task__row">
-							<input type="checkbox" class="task__col task__btn task__complete" title="is completed?" id="checkbox">
-							<p class="task__name truncate" title="name">Name of the task Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dicta sequi aliquid doloremque aperiam harum corporis eligendi, error fuga? Quos labore sunt ducimus totam eveniet, corrupti autem voluptas facilis in?</p>
-							<div class="task__control">
-								<button class="task__btn task__edit" id="remove" title="edit this task">
-									<img src="https://cdn-icons-png.flaticon.com/512/61/61456.png" alt="">
-								</button>
-								<button class="task__btn task__remove" id="remove" title="remove this task">
-									<img src="https://cdn-icons-png.flaticon.com/512/1345/1345823.png" alt="">
-								</button>
+			<div>
+				<div class="buttons">
+					<button>Delte selected</button>
+					<button>Delte all</button>
+				</div>
+				<ul>
+					<li>
+						<div class="task">
+							<div class="task__row">
+								<input type="checkbox" class="task__col task__btn task__complete" title="is completed?" id="checkbox">
+								<p class="task__name truncate" title="name">Name of the task Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dicta sequi aliquid doloremque aperiam harum corporis eligendi, error fuga? Quos labore sunt ducimus totam eveniet, corrupti autem voluptas facilis in?</p>
+								<div class="task__control">
+									<button class="task__btn task__edit" id="remove" title="edit this task">
+										<img src="https://cdn-icons-png.flaticon.com/512/61/61456.png" alt="">
+									</button>
+									<button class="task__btn task__remove" id="remove" title="remove this task">
+										<img src="https://cdn-icons-png.flaticon.com/512/1345/1345823.png" alt="">
+									</button>
+								</div>
 							</div>
 						</div>
-					</div>
-				</li>
-				<li>
-					<div class="task">
-						<div class="task__row">
-							<input type="checkbox" class="task__col task__btn task__complete" title="is completed?" id="checkbox">
-							<p class="task__name truncate" title="name">Name of the task Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dicta sequi aliquid doloremque aperiam harum corporis eligendi, error fuga? Quos labore sunt ducimus totam eveniet, corrupti autem voluptas facilis in?</p>
-							<div class="task__control">
-								<button class="task__btn task__edit" id="remove" title="edit this task">
-									<img src="https://cdn-icons-png.flaticon.com/512/61/61456.png" alt="">
-								</button>
-								<button class="task__btn task__remove" id="remove" title="remove this task">
-									<img src="https://cdn-icons-png.flaticon.com/512/1345/1345823.png" alt="">
-								</button>
+					</li>
+					<li>
+						<div class="task">
+							<div class="task__row">
+								<input type="checkbox" class="task__col task__btn task__complete" title="is completed?" id="checkbox">
+								<p class="task__name truncate" title="name">Name of the task Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dicta sequi aliquid doloremque aperiam harum corporis eligendi, error fuga? Quos labore sunt ducimus totam eveniet, corrupti autem voluptas facilis in?</p>
+								<div class="task__control">
+									<button class="task__btn task__edit" id="remove" title="edit this task">
+										<img src="https://cdn-icons-png.flaticon.com/512/61/61456.png" alt="">
+									</button>
+									<button class="task__btn task__remove" id="remove" title="remove this task">
+										<img src="https://cdn-icons-png.flaticon.com/512/1345/1345823.png" alt="">
+									</button>
+								</div>
 							</div>
 						</div>
-					</div>
-				</li>
-				<li>
-					<div class="task">
-						<div class="task__row">
-							<input type="checkbox" class="task__col task__btn task__complete" title="is completed?" id="checkbox">
-							<p class="task__name truncate" title="name">Name of the task Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dicta sequi aliquid doloremque aperiam harum corporis eligendi, error fuga? Quos labore sunt ducimus totam eveniet, corrupti autem voluptas facilis in?</p>
-							<div class="task__control">
-								<button class="task__btn task__edit" id="remove" title="edit this task">
-									<img src="https://cdn-icons-png.flaticon.com/512/61/61456.png" alt="">
-								</button>
-								<button class="task__btn task__remove" id="remove" title="remove this task">
-									<img src="https://cdn-icons-png.flaticon.com/512/1345/1345823.png" alt="">
-								</button>
+					</li>
+					<li>
+						<div class="task">
+							<div class="task__row">
+								<input type="checkbox" class="task__col task__btn task__complete" title="is completed?" id="checkbox">
+								<p class="task__name truncate" title="name">Name of the task Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dicta sequi aliquid doloremque aperiam harum corporis eligendi, error fuga? Quos labore sunt ducimus totam eveniet, corrupti autem voluptas facilis in?</p>
+								<div class="task__control">
+									<button class="task__btn task__edit" id="remove" title="edit this task">
+										<img src="https://cdn-icons-png.flaticon.com/512/61/61456.png" alt="">
+									</button>
+									<button class="task__btn task__remove" id="remove" title="remove this task">
+										<img src="https://cdn-icons-png.flaticon.com/512/1345/1345823.png" alt="">
+									</button>
+								</div>
 							</div>
 						</div>
-					</div>
-				</li>
-				<li>
-					<div class="task">
-						<div class="task__row">
-							<input type="checkbox" class="task__col task__btn task__complete" title="is completed?" id="checkbox">
-							<p class="task__name truncate" title="name">Name of the task Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dicta sequi aliquid doloremque aperiam harum corporis eligendi, error fuga? Quos labore sunt ducimus totam eveniet, corrupti autem voluptas facilis in?</p>
-							<div class="task__control">
-								<button class="task__btn task__edit" id="remove" title="edit this task">
-									<img src="https://cdn-icons-png.flaticon.com/512/61/61456.png" alt="">
-								</button>
-								<button class="task__btn task__remove" id="remove" title="remove this task">
-									<img src="https://cdn-icons-png.flaticon.com/512/1345/1345823.png" alt="">
-								</button>
+					</li>
+					<li>
+						<div class="task">
+							<div class="task__row">
+								<input type="checkbox" class="task__col task__btn task__complete" title="is completed?" id="checkbox">
+								<p class="task__name truncate" title="name">Name of the task Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dicta sequi aliquid doloremque aperiam harum corporis eligendi, error fuga? Quos labore sunt ducimus totam eveniet, corrupti autem voluptas facilis in?</p>
+								<div class="task__control">
+									<button class="task__btn task__edit" id="remove" title="edit this task">
+										<img src="https://cdn-icons-png.flaticon.com/512/61/61456.png" alt="">
+									</button>
+									<button class="task__btn task__remove" id="remove" title="remove this task">
+										<img src="https://cdn-icons-png.flaticon.com/512/1345/1345823.png" alt="">
+									</button>
+								</div>
 							</div>
 						</div>
-					</div>
-				</li>
-			</ul>
-			<div class="filter">
-				<button>All</button>
-				<button>To do</button>
-				<button>Done</button>
+					</li>
+				</ul>
+				<div class="filter">
+					<button>All</button>
+					<button>To do</button>
+					<button>Done</button>
+				</div>
 			</div>
+			<!-- при клике на таску открывается модалка для просмотра подробной инфы по таске или редактирования, если нажал на кнопку редактирования -->
+			<dialog>
+				<button class="close">[x]</button>
+				<div class="editable">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate dolor corporis saepe tenetur cum? Fugit explicabo qui quisquam officiis, dolore, officia accusantium totam praesentium quod quos nisi modi facere quae.</div>
+			</dialog>
 		</div>
-		<!-- при клике на таску открывается модалка для просмотра подробной инфы по таске или редактирования, если нажал на кнопку редактирования -->
-		<dialog>
-			<button class="close">[x]</button>
-			<div class="editable">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate dolor corporis saepe tenetur cum? Fugit explicabo qui quisquam officiis, dolore, officia accusantium totam praesentium quod quos nisi modi facere quae.</div>
-		</dialog>
-	</div>
 
-	<img src="assets/Fusion-8.jpg" alt="">
-</body>
+		<img src="assets/Fusion-8.jpg" alt="">
+		<img src="assets/Mach3-8.jpg" alt="">
+	</body>
 </html>
